--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       #     pkg-manager: yarn 
       - run:
           name: Run tests
-          command: node main.js
+          command: npm test
 
 workflows:
   # Below is the definition of your workflow.
