--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,15 +22,16 @@ jobs:
     steps:
       # Checkout the code as the first step.
       - checkout
+      - node/with-cache:
+          steps:
+            - run: npm install
+      - run: node src/main.js
       # Next, the node orb's install-packages step will install the dependencies from a package.json.
       # The orb install-packages step will also automatically cache them for faster future runs.
-      - node/install-packages
+      # - node/install-packages
       # If you are using yarn instead npm, remove the line above and uncomment the two lines below.
       # - node/install-packages:
       #     pkg-manager: yarn 
-      - run:
-          name: Run tests
-          command: npm -v
 
 workflows:
   # Below is the definition of your workflow.
